# car-manager

./: .env.template  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
car_manager/api/: serializers.py  urls.py  views.py
car_manager/car_manager/: settings.py  urls.py
car_manager/cars/: admin.py  forms.py  models.py  urls.py  views.py
car_manager/cars/migrations/: 0001_initial.py  0002_alter_car_year.py  0003_carcomments.py  0004_rename_carcomments_carcomment.py
car_manager/cars/static/cars/css/: styles.css
car_manager/cars/templates/cars/: base.html  car_confirm_delete.html  cars_create.html  cars_detail.html  cars_list.html  cars_update.html  comments_cars_create.html
car_manager/myauth/: forms.py  urls.py  views.py
car_manager/myauth/templates/auth/: login.html  register.html
